<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rakibul.touristspotandmarketplaceinbd.ahsan">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ahsan"
        android:scaleType="fitXY"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="Ahsan Manzil"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="200dp" />

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="275dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="242dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/am1"
                android:layout_width="wrap_content"
                android:layout_height="135dp"
                android:text="@string/am1"
                android:textAppearance="?android:textAppearanceMedium" />
            <TextView
                android:id="@+id/am2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/am2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/am3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/am3"
                android:textAppearance="?android:textAppearanceMedium" />
            <TextView
                android:id="@+id/am4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/am4"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/am5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/am5"
                android:textAppearance="?android:textAppearanceMedium" />
            <TextView
                android:id="@+id/am6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/am6"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/am7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/am7"
                android:textAppearance="?android:textAppearanceMedium" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
