<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rakibul.touristspotandmarketplaceinbd.novotheater">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:srcCompat="@drawable/nobo"
        android:scaleType="fitXY"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="Bangabandhu Sheikh Mujibur Rahman Novo Theatre"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="200dp" />

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="275dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="242dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nt1"
                android:layout_width="wrap_content"
                android:layout_height="135dp"
                android:text="@string/nt1"
                android:textAppearance="?android:textAppearanceMedium" />
            <TextView
                android:id="@+id/nt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nt2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/nt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nt3"
                android:textAppearance="?android:textAppearanceMedium" />
            <TextView
                android:id="@+id/nt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nt4"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/nt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nt5"
                android:textAppearance="?android:textAppearanceMedium" />
            <TextView
                android:id="@+id/nt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nt6"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/nt7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nt7"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
